Bug 1810935 - When a fling animation ends, snap back all overscrolled APZCs. r=hiro

Differential Revision: https://phabricator.services.mozilla.com/D212062